# NeoPicoBoot

./: .gitignore  CMakeLists.txt  INSTALLATION.md  README.md  USAGE.md  build-all.sh  build-firmware.sh
PicoWNeoPixelServer/PicoHTTPServer/pico_neopixel_animations/: pico_neopixel_animations.cpp
assets/: NeoPixel_Bracket.stl
src/: picoboot.c
